<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/write"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:hint="@string/dialog_template_write"
        android:importantForAutofill="no"
        android:inputType=""
        tools:targetApi="o" />

    <Button
        android:id="@+id/SaveNow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/save"
        />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/cancel"
        />
</LinearLayout>